// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Approval prompt > renders in narrow width > approval-narrow width 1`] = `
"┌──────────────────────────────────────┐
│ [1m[38;2;255;167;38mWARN[0m Approval required: workspace.write[0m │
│──────────────────────────────────────│
│ Target: src/index.ts                 │
│ Risk: [38;2;255;180;84mdestructive-local[0m │
│ [2mTarget: src/index.ts[0m         │
│                                      │
│ [1mActions:[0m                     │
│   once) Allow once                   │
│   session) Allow for this session    │
│   always) Always allow               │
│   deny) [38;2;239;83;80m✗[0m Deny  │
└──────────────────────────────────────┘"
`;

exports[`Approval prompt > renders in no Unicode > approval-no Unicode 1`] = `
"+-------------------------------------------------------------------+
| [1m[38;2;255;167;38mWARN[0m Approval required: workspace.write[0m |
|-------------------------------------------------------------------|
| Target: src/index.ts                                              |
| Risk: [38;2;255;180;84mdestructive-local[0m                     |
| [2mTarget: src/index.ts[0m                                      |
|                                                                   |
| [1mActions:[0m                                                  |
|   once) Allow once                                                |
|   session) Allow for this session                                 |
|   always) Always allow                                            |
|   deny) [38;2;239;83;80m[X][0m Deny                             |
+-------------------------------------------------------------------+"
`;

exports[`Approval prompt > renders in no color > approval-no color 1`] = `
"┌─────────────────────────────────────────────┐
│ WARN Approval required: workspace.write     │
│─────────────────────────────────────────────│
│ Target: src/index.ts                        │
│ Risk: destructive-local                     │
│ Target: src/index.ts                        │
│                                             │
│ Actions:                                    │
│   once) Allow once                          │
│   session) Allow for this session           │
│   always) Always allow                      │
│   deny) ✗ Deny                              │
└─────────────────────────────────────────────┘"
`;

exports[`Approval prompt > renders in plain > approval-plain 1`] = `
"[WARN] Approval required: workspace.write
Target: src/index.ts
Risk: destructive-local
  Target: src/index.ts

Actions:
  once) Allow once
  session) Allow for this session
  always) Always allow
  deny) [ERROR] Deny"
`;

exports[`Approval prompt > renders in standard dark > approval-standard dark 1`] = `
"┌───────────────────────────────────────────────────────────────────┐
│ [1m[38;2;255;167;38mWARN[0m Approval required: workspace.write[0m │
│───────────────────────────────────────────────────────────────────│
│ Target: src/index.ts                                              │
│ Risk: [38;2;255;180;84mdestructive-local[0m                     │
│ [2mTarget: src/index.ts[0m                                      │
│                                                                   │
│ [1mActions:[0m                                                  │
│   once) Allow once                                                │
│   session) Allow for this session                                 │
│   always) Always allow                                            │
│   deny) [38;2;239;83;80m✗[0m Deny                               │
└───────────────────────────────────────────────────────────────────┘"
`;

exports[`Approval prompt > renders in standard light > approval-standard light 1`] = `
"┌──────────────────────────────────────────────────────────────────┐
│ [1m[38;2;239;108;0mWARN[0m Approval required: workspace.write[0m │
│──────────────────────────────────────────────────────────────────│
│ Target: src/index.ts                                             │
│ Risk: [38;2;180;83;9mdestructive-local[0m                      │
│ [2mTarget: src/index.ts[0m                                     │
│                                                                  │
│ [1mActions:[0m                                                 │
│   once) Allow once                                               │
│   session) Allow for this session                                │
│   always) Always allow                                           │
│   deny) [38;2;198;40;40m✗[0m Deny                              │
└──────────────────────────────────────────────────────────────────┘"
`;

exports[`Progress context rail > renders active in narrow width > rail-active-narrow width 1`] = `
"[1mTurn progress[0m
[38;2;76;175;80m✓[0m [2mweb.extract[0m
[38;2;64;224;208m(☥)[0m [38;2;64;224;208mmemory.write[0m
[2m○[0m terminal.exec"
`;

exports[`Progress context rail > renders active in no Unicode > rail-active-no Unicode 1`] = `
"[1mTurn progress[0m
[x] [2mweb.extract[0m
[>] [38;2;64;224;208mmemory.write[0m
[ ] terminal.exec"
`;

exports[`Progress context rail > renders active in no color > rail-active-no color 1`] = `
"Turn progress
✓ web.extract
(☥) memory.write
○ terminal.exec"
`;

exports[`Progress context rail > renders active in plain > rail-active-plain 1`] = `
"Turn progress
[x] web.extract
[>] memory.write
[ ] terminal.exec"
`;

exports[`Progress context rail > renders active in standard dark > rail-active-standard dark 1`] = `
"[1mTurn progress[0m
[38;2;76;175;80m✓[0m [2mweb.extract[0m
[38;2;64;224;208m(☥)[0m [38;2;64;224;208mmemory.write[0m
[2m○[0m terminal.exec"
`;

exports[`Progress context rail > renders active in standard light > rail-active-standard light 1`] = `
"[1mTurn progress[0m
[38;2;46;125;50m✓[0m [2mweb.extract[0m
[38;2;0;140;149m(☥)[0m [38;2;0;140;149mmemory.write[0m
[2m○[0m terminal.exec"
`;

exports[`Progress context rail > renders empty in narrow width > rail-empty-narrow width 1`] = `
"[1mTurn progress[0m
[2mNo steps.[0m"
`;

exports[`Progress context rail > renders empty in no Unicode > rail-empty-no Unicode 1`] = `
"[1mTurn progress[0m
[2mNo steps.[0m"
`;

exports[`Progress context rail > renders empty in no color > rail-empty-no color 1`] = `
"Turn progress
No steps."
`;

exports[`Progress context rail > renders empty in plain > rail-empty-plain 1`] = `
"Turn progress
No steps."
`;

exports[`Progress context rail > renders empty in standard dark > rail-empty-standard dark 1`] = `
"[1mTurn progress[0m
[2mNo steps.[0m"
`;

exports[`Progress context rail > renders empty in standard light > rail-empty-standard light 1`] = `
"[1mTurn progress[0m
[2mNo steps.[0m"
`;

exports[`Progress context rail > renders failed in narrow width > rail-failed-narrow width 1`] = `
"[1mTurn progress[0m
[38;2;76;175;80m✓[0m [2mweb.extract[0m
[38;2;239;83;80m✗[0m [38;2;239;83;80mterminal.exec[0m"
`;

exports[`Progress context rail > renders failed in no Unicode > rail-failed-no Unicode 1`] = `
"[1mTurn progress[0m
[x] [2mweb.extract[0m
[-] [38;2;239;83;80mterminal.exec[0m"
`;

exports[`Progress context rail > renders failed in no color > rail-failed-no color 1`] = `
"Turn progress
✓ web.extract
✗ terminal.exec"
`;

exports[`Progress context rail > renders failed in plain > rail-failed-plain 1`] = `
"Turn progress
[x] web.extract
[-] terminal.exec"
`;

exports[`Progress context rail > renders failed in standard dark > rail-failed-standard dark 1`] = `
"[1mTurn progress[0m
[38;2;76;175;80m✓[0m [2mweb.extract[0m
[38;2;239;83;80m✗[0m [38;2;239;83;80mterminal.exec[0m"
`;

exports[`Progress context rail > renders failed in standard light > rail-failed-standard light 1`] = `
"[1mTurn progress[0m
[38;2;46;125;50m✓[0m [2mweb.extract[0m
[38;2;198;40;40m✗[0m [38;2;198;40;40mterminal.exec[0m"
`;

exports[`Security audit > renders compact in narrow width > security-compact-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1mSecurity audit[0m

• workspace.write -> allow: risk=destructive-local rule=trusted-workspace
• terminal.exec -> ask: risk=external-side-effect rule=policy"
`;

exports[`Security audit > renders compact in no Unicode > security-compact-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1mSecurity audit[0m

- workspace.write -> allow: risk=destructive-local rule=trusted-workspace
- terminal.exec -> ask: risk=external-side-effect rule=policy"
`;

exports[`Security audit > renders compact in no color > security-compact-no color 1`] = `
"[OK] Security audit

• workspace.write -> allow: risk=destructive-local rule=trusted-workspace
• terminal.exec -> ask: risk=external-side-effect rule=policy"
`;

exports[`Security audit > renders compact in plain > security-compact-plain 1`] = `
"[OK] Security audit

- workspace.write -> allow: risk=destructive-local rule=trusted-workspace
- terminal.exec -> ask: risk=external-side-effect rule=policy"
`;

exports[`Security audit > renders compact in standard dark > security-compact-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1mSecurity audit[0m

• workspace.write -> allow: risk=destructive-local rule=trusted-workspace
• terminal.exec -> ask: risk=external-side-effect rule=policy"
`;

exports[`Security audit > renders compact in standard light > security-compact-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1mSecurity audit[0m

• workspace.write -> allow: risk=destructive-local rule=trusted-workspace
• terminal.exec -> ask: risk=external-side-effect rule=policy"
`;

exports[`Security audit > renders debug in narrow width > security-debug-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1mSecurity audit[0m

[38;2;90;172;255m[INFO][0m [1mworkspace.write -> allow[0m: risk=destructive-local rule=trusted-workspace
[2m  mode: adaptive[0m
[2m  risk: low[0m
[2m  risk class: destructive-local[0m
[2m  deterministic rule: trusted-workspace[0m
[2m  reason: Workspace is trusted[0m
[2m  assessor: not used (disabled)[0m"
`;

exports[`Security audit > renders debug in no Unicode > security-debug-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1mSecurity audit[0m

[38;2;90;172;255m[INFO][0m [1mworkspace.write -> allow[0m: risk=destructive-local rule=trusted-workspace
[2m  mode: adaptive[0m
[2m  risk: low[0m
[2m  risk class: destructive-local[0m
[2m  deterministic rule: trusted-workspace[0m
[2m  reason: Workspace is trusted[0m
[2m  assessor: not used (disabled)[0m"
`;

exports[`Security audit > renders debug in no color > security-debug-no color 1`] = `
"[OK] Security audit

[INFO] workspace.write -> allow: risk=destructive-local rule=trusted-workspace
  mode: adaptive
  risk: low
  risk class: destructive-local
  deterministic rule: trusted-workspace
  reason: Workspace is trusted
  assessor: not used (disabled)"
`;

exports[`Security audit > renders debug in plain > security-debug-plain 1`] = `
"[OK] Security audit

[INFO] workspace.write -> allow: risk=destructive-local rule=trusted-workspace
  mode: adaptive
  risk: low
  risk class: destructive-local
  deterministic rule: trusted-workspace
  reason: Workspace is trusted
  assessor: not used (disabled)"
`;

exports[`Security audit > renders debug in standard dark > security-debug-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1mSecurity audit[0m

[38;2;90;172;255m[INFO][0m [1mworkspace.write -> allow[0m: risk=destructive-local rule=trusted-workspace
[2m  mode: adaptive[0m
[2m  risk: low[0m
[2m  risk class: destructive-local[0m
[2m  deterministic rule: trusted-workspace[0m
[2m  reason: Workspace is trusted[0m
[2m  assessor: not used (disabled)[0m"
`;

exports[`Security audit > renders debug in standard light > security-debug-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1mSecurity audit[0m

[38;2;0;87;217m[INFO][0m [1mworkspace.write -> allow[0m: risk=destructive-local rule=trusted-workspace
[2m  mode: adaptive[0m
[2m  risk: low[0m
[2m  risk class: destructive-local[0m
[2m  deterministic rule: trusted-workspace[0m
[2m  reason: Workspace is trusted[0m
[2m  assessor: not used (disabled)[0m"
`;

exports[`Security audit > renders empty in narrow width > security-empty-narrow width 1`] = `"[38;2;90;172;255m[INFO][0m [1mSecurity audit[0m: No tool security decisions have been recorded for this session yet."`;

exports[`Security audit > renders empty in no Unicode > security-empty-no Unicode 1`] = `"[38;2;90;172;255m[INFO][0m [1mSecurity audit[0m: No tool security decisions have been recorded for this session yet."`;

exports[`Security audit > renders empty in no color > security-empty-no color 1`] = `"[INFO] Security audit: No tool security decisions have been recorded for this session yet."`;

exports[`Security audit > renders empty in plain > security-empty-plain 1`] = `"[INFO] Security audit: No tool security decisions have been recorded for this session yet."`;

exports[`Security audit > renders empty in standard dark > security-empty-standard dark 1`] = `"[38;2;90;172;255m[INFO][0m [1mSecurity audit[0m: No tool security decisions have been recorded for this session yet."`;

exports[`Security audit > renders empty in standard light > security-empty-standard light 1`] = `"[38;2;0;87;217m[INFO][0m [1mSecurity audit[0m: No tool security decisions have been recorded for this session yet."`;

exports[`Setup needed > renders image generation in narrow width > setup-image-narrow width 1`] = `
"[38;2;255;167;38m[WARN][0m [1mSetup required[0m: image_generation needs one protected credential before I can continue.
[2m  Provider: fal[0m
[2m  Model: fal-ai/flux/dev[0m
[2m  Secret env: FAL_KEY[0m
[2m  The key is captured by the CLI and is not sent to the model or written to the transcript.[0m"
`;

exports[`Setup needed > renders image generation in no Unicode > setup-image-no Unicode 1`] = `
"[38;2;255;167;38m[WARN][0m [1mSetup required[0m: image_generation needs one protected credential before I can continue.
[2m  Provider: fal[0m
[2m  Model: fal-ai/flux/dev[0m
[2m  Secret env: FAL_KEY[0m
[2m  The key is captured by the CLI and is not sent to the model or written to the transcript.[0m"
`;

exports[`Setup needed > renders image generation in no color > setup-image-no color 1`] = `
"[WARN] Setup required: image_generation needs one protected credential before I can continue.
  Provider: fal
  Model: fal-ai/flux/dev
  Secret env: FAL_KEY
  The key is captured by the CLI and is not sent to the model or written to the transcript."
`;

exports[`Setup needed > renders image generation in plain > setup-image-plain 1`] = `
"[WARN] Setup required: image_generation needs one protected credential before I can continue.
  Provider: fal
  Model: fal-ai/flux/dev
  Secret env: FAL_KEY
  The key is captured by the CLI and is not sent to the model or written to the transcript."
`;

exports[`Setup needed > renders image generation in standard dark > setup-image-standard dark 1`] = `
"[38;2;255;167;38m[WARN][0m [1mSetup required[0m: image_generation needs one protected credential before I can continue.
[2m  Provider: fal[0m
[2m  Model: fal-ai/flux/dev[0m
[2m  Secret env: FAL_KEY[0m
[2m  The key is captured by the CLI and is not sent to the model or written to the transcript.[0m"
`;

exports[`Setup needed > renders image generation in standard light > setup-image-standard light 1`] = `
"[38;2;239;108;0m[WARN][0m [1mSetup required[0m: image_generation needs one protected credential before I can continue.
[2m  Provider: fal[0m
[2m  Model: fal-ai/flux/dev[0m
[2m  Secret env: FAL_KEY[0m
[2m  The key is captured by the CLI and is not sent to the model or written to the transcript.[0m"
`;

exports[`Setup needed > renders other capability in narrow width > setup-other-narrow width 1`] = `
"[38;2;255;167;38m[WARN][0m [1mSetup required[0m: tts needs one protected credential before I can continue.
[2m  Provider: default[0m
[2m  Model: default[0m
[2m  Secret env: ELEVENLABS_API_KEY[0m
[2m  The key is captured by the CLI and is not sent to the model or written to the transcript.[0m"
`;

exports[`Setup needed > renders other capability in no Unicode > setup-other-no Unicode 1`] = `
"[38;2;255;167;38m[WARN][0m [1mSetup required[0m: tts needs one protected credential before I can continue.
[2m  Provider: default[0m
[2m  Model: default[0m
[2m  Secret env: ELEVENLABS_API_KEY[0m
[2m  The key is captured by the CLI and is not sent to the model or written to the transcript.[0m"
`;

exports[`Setup needed > renders other capability in no color > setup-other-no color 1`] = `
"[WARN] Setup required: tts needs one protected credential before I can continue.
  Provider: default
  Model: default
  Secret env: ELEVENLABS_API_KEY
  The key is captured by the CLI and is not sent to the model or written to the transcript."
`;

exports[`Setup needed > renders other capability in plain > setup-other-plain 1`] = `
"[WARN] Setup required: tts needs one protected credential before I can continue.
  Provider: default
  Model: default
  Secret env: ELEVENLABS_API_KEY
  The key is captured by the CLI and is not sent to the model or written to the transcript."
`;

exports[`Setup needed > renders other capability in standard dark > setup-other-standard dark 1`] = `
"[38;2;255;167;38m[WARN][0m [1mSetup required[0m: tts needs one protected credential before I can continue.
[2m  Provider: default[0m
[2m  Model: default[0m
[2m  Secret env: ELEVENLABS_API_KEY[0m
[2m  The key is captured by the CLI and is not sent to the model or written to the transcript.[0m"
`;

exports[`Setup needed > renders other capability in standard light > setup-other-standard light 1`] = `
"[38;2;239;108;0m[WARN][0m [1mSetup required[0m: tts needs one protected credential before I can continue.
[2m  Provider: default[0m
[2m  Model: default[0m
[2m  Secret env: ELEVENLABS_API_KEY[0m
[2m  The key is captured by the CLI and is not sent to the model or written to the transcript.[0m"
`;

exports[`Tool activity timeline > renders empty in narrow width > timeline-empty-narrow width 1`] = `"[2mNo activity.[0m"`;

exports[`Tool activity timeline > renders empty in no Unicode > timeline-empty-no Unicode 1`] = `"[2mNo activity.[0m"`;

exports[`Tool activity timeline > renders empty in no color > timeline-empty-no color 1`] = `"No activity."`;

exports[`Tool activity timeline > renders empty in plain > timeline-empty-plain 1`] = `"No activity."`;

exports[`Tool activity timeline > renders empty in standard dark > timeline-empty-standard dark 1`] = `"[2mNo activity.[0m"`;

exports[`Tool activity timeline > renders empty in standard light > timeline-empty-standard light 1`] = `"[2mNo activity.[0m"`;

exports[`Tool activity timeline > renders multiple mixed in narrow width > timeline-mixed-narrow width 1`] = `
"[38;2;76;175;80m✓[0m [1mweb.extract[0m [2m| 800ms[0m
[38;2;64;224;208m(◉)[0m [1mmemory.write[0m
[38;2;239;83;80m✗[0m [1mterminal.exec[0m [2m| 300ms[0m"
`;

exports[`Tool activity timeline > renders multiple mixed in no Unicode > timeline-mixed-no Unicode 1`] = `
"[x] [1mweb.extract[0m [2m| 800ms[0m
[>] [1mmemory.write[0m
[-] [1mterminal.exec[0m [2m| 300ms[0m"
`;

exports[`Tool activity timeline > renders multiple mixed in no color > timeline-mixed-no color 1`] = `
"✓ web.extract | 800ms
(◉) memory.write
✗ terminal.exec | 300ms"
`;

exports[`Tool activity timeline > renders multiple mixed in plain > timeline-mixed-plain 1`] = `
"[x] web.extract | 800ms
[>] memory.write
[-] terminal.exec | 300ms"
`;

exports[`Tool activity timeline > renders multiple mixed in standard dark > timeline-mixed-standard dark 1`] = `
"[38;2;76;175;80m✓[0m [1mweb.extract[0m [2m| 800ms[0m
[38;2;64;224;208m(◉)[0m [1mmemory.write[0m
[38;2;239;83;80m✗[0m [1mterminal.exec[0m [2m| 300ms[0m"
`;

exports[`Tool activity timeline > renders multiple mixed in standard light > timeline-mixed-standard light 1`] = `
"[38;2;46;125;50m✓[0m [1mweb.extract[0m [2m| 800ms[0m
[38;2;0;140;149m(◉)[0m [1mmemory.write[0m
[38;2;198;40;40m✗[0m [1mterminal.exec[0m [2m| 300ms[0m"
`;

exports[`Tool activity timeline > renders single done in narrow width > timeline-done-narrow width 1`] = `"[38;2;76;175;80m✓[0m [1martifact.store[0m [2m| 120ms[0m [2m| 1.2k captured / 1.0k sent[0m"`;

exports[`Tool activity timeline > renders single done in no Unicode > timeline-done-no Unicode 1`] = `"[x] [1martifact.store[0m [2m| 120ms[0m [2m| 1.2k captured / 1.0k sent[0m"`;

exports[`Tool activity timeline > renders single done in no color > timeline-done-no color 1`] = `"✓ artifact.store | 120ms | 1.2k captured / 1.0k sent"`;

exports[`Tool activity timeline > renders single done in plain > timeline-done-plain 1`] = `"[x] artifact.store | 120ms | 1.2k captured / 1.0k sent"`;

exports[`Tool activity timeline > renders single done in standard dark > timeline-done-standard dark 1`] = `"[38;2;76;175;80m✓[0m [1martifact.store[0m [2m| 120ms[0m [2m| 1.2k captured / 1.0k sent[0m"`;

exports[`Tool activity timeline > renders single done in standard light > timeline-done-standard light 1`] = `"[38;2;46;125;50m✓[0m [1martifact.store[0m [2m| 120ms[0m [2m| 1.2k captured / 1.0k sent[0m"`;

exports[`Tool activity timeline > renders single failed in narrow width > timeline-failed-narrow width 1`] = `"[38;2;239;83;80m✗[0m [1mterminal.exec[0m [2m| 500ms[0m"`;

exports[`Tool activity timeline > renders single failed in no Unicode > timeline-failed-no Unicode 1`] = `"[-] [1mterminal.exec[0m [2m| 500ms[0m"`;

exports[`Tool activity timeline > renders single failed in no color > timeline-failed-no color 1`] = `"✗ terminal.exec | 500ms"`;

exports[`Tool activity timeline > renders single failed in plain > timeline-failed-plain 1`] = `"[-] terminal.exec | 500ms"`;

exports[`Tool activity timeline > renders single failed in standard dark > timeline-failed-standard dark 1`] = `"[38;2;239;83;80m✗[0m [1mterminal.exec[0m [2m| 500ms[0m"`;

exports[`Tool activity timeline > renders single failed in standard light > timeline-failed-standard light 1`] = `"[38;2;198;40;40m✗[0m [1mterminal.exec[0m [2m| 500ms[0m"`;

exports[`Tool activity timeline > renders single gated in narrow width > timeline-gated-narrow width 1`] = `"[38;2;255;180;84m⚠[0m [1mworkspace.write[0m [2m| 50ms[0m [38;2;255;180;84m| decision: ask[0m [38;2;255;180;84m| risk: destructive-local[0m"`;

exports[`Tool activity timeline > renders single gated in no Unicode > timeline-gated-no Unicode 1`] = `"[?] [1mworkspace.write[0m [2m| 50ms[0m [38;2;255;180;84m| decision: ask[0m [38;2;255;180;84m| risk: destructive-local[0m"`;

exports[`Tool activity timeline > renders single gated in no color > timeline-gated-no color 1`] = `"⚠ workspace.write | 50ms | decision: ask | risk: destructive-local"`;

exports[`Tool activity timeline > renders single gated in plain > timeline-gated-plain 1`] = `"[?] workspace.write | 50ms | decision: ask | risk: destructive-local"`;

exports[`Tool activity timeline > renders single gated in standard dark > timeline-gated-standard dark 1`] = `"[38;2;255;180;84m⚠[0m [1mworkspace.write[0m [2m| 50ms[0m [38;2;255;180;84m| decision: ask[0m [38;2;255;180;84m| risk: destructive-local[0m"`;

exports[`Tool activity timeline > renders single gated in standard light > timeline-gated-standard light 1`] = `"[38;2;180;83;9m⚠[0m [1mworkspace.write[0m [2m| 50ms[0m [38;2;180;83;9m| decision: ask[0m [38;2;180;83;9m| risk: destructive-local[0m"`;

exports[`Tool activity timeline > renders single running in narrow width > timeline-running-narrow width 1`] = `"[38;2;64;224;208m(◉)[0m [1martifact.store[0m"`;

exports[`Tool activity timeline > renders single running in no Unicode > timeline-running-no Unicode 1`] = `"[>] [1martifact.store[0m"`;

exports[`Tool activity timeline > renders single running in no color > timeline-running-no color 1`] = `"(◉) artifact.store"`;

exports[`Tool activity timeline > renders single running in plain > timeline-running-plain 1`] = `"[>] artifact.store"`;

exports[`Tool activity timeline > renders single running in standard dark > timeline-running-standard dark 1`] = `"[38;2;64;224;208m(◉)[0m [1martifact.store[0m"`;

exports[`Tool activity timeline > renders single running in standard light > timeline-running-standard light 1`] = `"[38;2;0;140;149m(◉)[0m [1martifact.store[0m"`;

exports[`tool-activity > Approval prompt > renders in narrow width > approval-narrow width 1`] = `
"┌──────────────────────────────────────┐
│ [1m[38;2;255;167;38mWARN[0m Approval required: workspace.write[0m │
│──────────────────────────────────────│
│ Target: src/index.ts                 │
│ Risk: [38;2;255;180;84mdestructive-local[0m │
│ [2mTarget: src/index.ts[0m         │
│                                      │
│ [1mActions:[0m                     │
│   once) Allow once                   │
│   session) Allow for this session    │
│   always) Always allow               │
│   deny) [38;2;239;83;80m✗[0m Deny  │
└──────────────────────────────────────┘"
`;

exports[`tool-activity > Approval prompt > renders in no Unicode > approval-no Unicode 1`] = `
"+-------------------------------------------------------------------+
| [1m[38;2;255;167;38mWARN[0m Approval required: workspace.write[0m |
|-------------------------------------------------------------------|
| Target: src/index.ts                                              |
| Risk: [38;2;255;180;84mdestructive-local[0m                     |
| [2mTarget: src/index.ts[0m                                      |
|                                                                   |
| [1mActions:[0m                                                  |
|   once) Allow once                                                |
|   session) Allow for this session                                 |
|   always) Always allow                                            |
|   deny) [38;2;239;83;80m[X][0m Deny                             |
+-------------------------------------------------------------------+"
`;

exports[`tool-activity > Approval prompt > renders in no color > approval-no color 1`] = `
"┌─────────────────────────────────────────────┐
│ WARN Approval required: workspace.write     │
│─────────────────────────────────────────────│
│ Target: src/index.ts                        │
│ Risk: destructive-local                     │
│ Target: src/index.ts                        │
│                                             │
│ Actions:                                    │
│   once) Allow once                          │
│   session) Allow for this session           │
│   always) Always allow                      │
│   deny) ✗ Deny                              │
└─────────────────────────────────────────────┘"
`;

exports[`tool-activity > Approval prompt > renders in plain > approval-plain 1`] = `
"[WARN] Approval required: workspace.write
Target: src/index.ts
Risk: destructive-local
  Target: src/index.ts

Actions:
  once) Allow once
  session) Allow for this session
  always) Always allow
  deny) [ERROR] Deny"
`;

exports[`tool-activity > Approval prompt > renders in standard dark > approval-standard dark 1`] = `
"┌───────────────────────────────────────────────────────────────────┐
│ [1m[38;2;255;167;38mWARN[0m Approval required: workspace.write[0m │
│───────────────────────────────────────────────────────────────────│
│ Target: src/index.ts                                              │
│ Risk: [38;2;255;180;84mdestructive-local[0m                     │
│ [2mTarget: src/index.ts[0m                                      │
│                                                                   │
│ [1mActions:[0m                                                  │
│   once) Allow once                                                │
│   session) Allow for this session                                 │
│   always) Always allow                                            │
│   deny) [38;2;239;83;80m✗[0m Deny                               │
└───────────────────────────────────────────────────────────────────┘"
`;

exports[`tool-activity > Approval prompt > renders in standard light > approval-standard light 1`] = `
"┌──────────────────────────────────────────────────────────────────┐
│ [1m[38;2;239;108;0mWARN[0m Approval required: workspace.write[0m │
│──────────────────────────────────────────────────────────────────│
│ Target: src/index.ts                                             │
│ Risk: [38;2;180;83;9mdestructive-local[0m                      │
│ [2mTarget: src/index.ts[0m                                     │
│                                                                  │
│ [1mActions:[0m                                                 │
│   once) Allow once                                               │
│   session) Allow for this session                                │
│   always) Always allow                                           │
│   deny) [38;2;198;40;40m✗[0m Deny                              │
└──────────────────────────────────────────────────────────────────┘"
`;

exports[`tool-activity > Progress context rail > renders active in narrow width > rail-active-narrow width 1`] = `
"[1mTurn progress[0m
[38;2;76;175;80m✓[0m [2mweb.extract[0m
[38;2;64;224;208m(⌦)[0m [38;2;64;224;208mmemory.write[0m
[2m○[0m terminal.exec"
`;

exports[`tool-activity > Progress context rail > renders active in no Unicode > rail-active-no Unicode 1`] = `
"[1mTurn progress[0m
[x] [2mweb.extract[0m
[>] [38;2;64;224;208mmemory.write[0m
[ ] terminal.exec"
`;

exports[`tool-activity > Progress context rail > renders active in no color > rail-active-no color 1`] = `
"Turn progress
✓ web.extract
(⌦) memory.write
○ terminal.exec"
`;

exports[`tool-activity > Progress context rail > renders active in plain > rail-active-plain 1`] = `
"Turn progress
[x] web.extract
[>] memory.write
[ ] terminal.exec"
`;

exports[`tool-activity > Progress context rail > renders active in standard dark > rail-active-standard dark 1`] = `
"[1mTurn progress[0m
[38;2;76;175;80m✓[0m [2mweb.extract[0m
[38;2;64;224;208m(⌦)[0m [38;2;64;224;208mmemory.write[0m
[2m○[0m terminal.exec"
`;

exports[`tool-activity > Progress context rail > renders active in standard light > rail-active-standard light 1`] = `
"[1mTurn progress[0m
[38;2;46;125;50m✓[0m [2mweb.extract[0m
[38;2;0;140;149m(⌦)[0m [38;2;0;140;149mmemory.write[0m
[2m○[0m terminal.exec"
`;

exports[`tool-activity > Progress context rail > renders empty in narrow width > rail-empty-narrow width 1`] = `
"[1mTurn progress[0m
[2mNo steps.[0m"
`;

exports[`tool-activity > Progress context rail > renders empty in no Unicode > rail-empty-no Unicode 1`] = `
"[1mTurn progress[0m
[2mNo steps.[0m"
`;

exports[`tool-activity > Progress context rail > renders empty in no color > rail-empty-no color 1`] = `
"Turn progress
No steps."
`;

exports[`tool-activity > Progress context rail > renders empty in plain > rail-empty-plain 1`] = `
"Turn progress
No steps."
`;

exports[`tool-activity > Progress context rail > renders empty in standard dark > rail-empty-standard dark 1`] = `
"[1mTurn progress[0m
[2mNo steps.[0m"
`;

exports[`tool-activity > Progress context rail > renders empty in standard light > rail-empty-standard light 1`] = `
"[1mTurn progress[0m
[2mNo steps.[0m"
`;

exports[`tool-activity > Progress context rail > renders failed in narrow width > rail-failed-narrow width 1`] = `
"[1mTurn progress[0m
[38;2;76;175;80m✓[0m [2mweb.extract[0m
[38;2;239;83;80m✗[0m [38;2;239;83;80mterminal.exec[0m"
`;

exports[`tool-activity > Progress context rail > renders failed in no Unicode > rail-failed-no Unicode 1`] = `
"[1mTurn progress[0m
[x] [2mweb.extract[0m
[-] [38;2;239;83;80mterminal.exec[0m"
`;

exports[`tool-activity > Progress context rail > renders failed in no color > rail-failed-no color 1`] = `
"Turn progress
✓ web.extract
✗ terminal.exec"
`;

exports[`tool-activity > Progress context rail > renders failed in plain > rail-failed-plain 1`] = `
"Turn progress
[x] web.extract
[-] terminal.exec"
`;

exports[`tool-activity > Progress context rail > renders failed in standard dark > rail-failed-standard dark 1`] = `
"[1mTurn progress[0m
[38;2;76;175;80m✓[0m [2mweb.extract[0m
[38;2;239;83;80m✗[0m [38;2;239;83;80mterminal.exec[0m"
`;

exports[`tool-activity > Progress context rail > renders failed in standard light > rail-failed-standard light 1`] = `
"[1mTurn progress[0m
[38;2;46;125;50m✓[0m [2mweb.extract[0m
[38;2;198;40;40m✗[0m [38;2;198;40;40mterminal.exec[0m"
`;

exports[`tool-activity > Security audit > renders compact in narrow width > security-compact-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1mSecurity audit[0m

• workspace.write -> allow: risk=destructive-local rule=trusted-workspace
• terminal.exec -> ask: risk=external-side-effect rule=policy"
`;

exports[`tool-activity > Security audit > renders compact in no Unicode > security-compact-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1mSecurity audit[0m

- workspace.write -> allow: risk=destructive-local rule=trusted-workspace
- terminal.exec -> ask: risk=external-side-effect rule=policy"
`;

exports[`tool-activity > Security audit > renders compact in no color > security-compact-no color 1`] = `
"[OK] Security audit

• workspace.write -> allow: risk=destructive-local rule=trusted-workspace
• terminal.exec -> ask: risk=external-side-effect rule=policy"
`;

exports[`tool-activity > Security audit > renders compact in plain > security-compact-plain 1`] = `
"[OK] Security audit

- workspace.write -> allow: risk=destructive-local rule=trusted-workspace
- terminal.exec -> ask: risk=external-side-effect rule=policy"
`;

exports[`tool-activity > Security audit > renders compact in standard dark > security-compact-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1mSecurity audit[0m

• workspace.write -> allow: risk=destructive-local rule=trusted-workspace
• terminal.exec -> ask: risk=external-side-effect rule=policy"
`;

exports[`tool-activity > Security audit > renders compact in standard light > security-compact-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1mSecurity audit[0m

• workspace.write -> allow: risk=destructive-local rule=trusted-workspace
• terminal.exec -> ask: risk=external-side-effect rule=policy"
`;

exports[`tool-activity > Security audit > renders debug in narrow width > security-debug-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1mSecurity audit[0m

[38;2;90;172;255m[INFO][0m [1mworkspace.write -> allow[0m: risk=destructive-local rule=trusted-workspace
[2m  mode: adaptive[0m
[2m  risk: low[0m
[2m  risk class: destructive-local[0m
[2m  deterministic rule: trusted-workspace[0m
[2m  reason: Workspace is trusted[0m
[2m  assessor: not used (disabled)[0m"
`;

exports[`tool-activity > Security audit > renders debug in no Unicode > security-debug-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1mSecurity audit[0m

[38;2;90;172;255m[INFO][0m [1mworkspace.write -> allow[0m: risk=destructive-local rule=trusted-workspace
[2m  mode: adaptive[0m
[2m  risk: low[0m
[2m  risk class: destructive-local[0m
[2m  deterministic rule: trusted-workspace[0m
[2m  reason: Workspace is trusted[0m
[2m  assessor: not used (disabled)[0m"
`;

exports[`tool-activity > Security audit > renders debug in no color > security-debug-no color 1`] = `
"[OK] Security audit

[INFO] workspace.write -> allow: risk=destructive-local rule=trusted-workspace
  mode: adaptive
  risk: low
  risk class: destructive-local
  deterministic rule: trusted-workspace
  reason: Workspace is trusted
  assessor: not used (disabled)"
`;

exports[`tool-activity > Security audit > renders debug in plain > security-debug-plain 1`] = `
"[OK] Security audit

[INFO] workspace.write -> allow: risk=destructive-local rule=trusted-workspace
  mode: adaptive
  risk: low
  risk class: destructive-local
  deterministic rule: trusted-workspace
  reason: Workspace is trusted
  assessor: not used (disabled)"
`;

exports[`tool-activity > Security audit > renders debug in standard dark > security-debug-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1mSecurity audit[0m

[38;2;90;172;255m[INFO][0m [1mworkspace.write -> allow[0m: risk=destructive-local rule=trusted-workspace
[2m  mode: adaptive[0m
[2m  risk: low[0m
[2m  risk class: destructive-local[0m
[2m  deterministic rule: trusted-workspace[0m
[2m  reason: Workspace is trusted[0m
[2m  assessor: not used (disabled)[0m"
`;

exports[`tool-activity > Security audit > renders debug in standard light > security-debug-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1mSecurity audit[0m

[38;2;0;87;217m[INFO][0m [1mworkspace.write -> allow[0m: risk=destructive-local rule=trusted-workspace
[2m  mode: adaptive[0m
[2m  risk: low[0m
[2m  risk class: destructive-local[0m
[2m  deterministic rule: trusted-workspace[0m
[2m  reason: Workspace is trusted[0m
[2m  assessor: not used (disabled)[0m"
`;

exports[`tool-activity > Security audit > renders empty in narrow width > security-empty-narrow width 1`] = `"[38;2;90;172;255m[INFO][0m [1mSecurity audit[0m: No tool security decisions have been recorded for this session yet."`;

exports[`tool-activity > Security audit > renders empty in no Unicode > security-empty-no Unicode 1`] = `"[38;2;90;172;255m[INFO][0m [1mSecurity audit[0m: No tool security decisions have been recorded for this session yet."`;

exports[`tool-activity > Security audit > renders empty in no color > security-empty-no color 1`] = `"[INFO] Security audit: No tool security decisions have been recorded for this session yet."`;

exports[`tool-activity > Security audit > renders empty in plain > security-empty-plain 1`] = `"[INFO] Security audit: No tool security decisions have been recorded for this session yet."`;

exports[`tool-activity > Security audit > renders empty in standard dark > security-empty-standard dark 1`] = `"[38;2;90;172;255m[INFO][0m [1mSecurity audit[0m: No tool security decisions have been recorded for this session yet."`;

exports[`tool-activity > Security audit > renders empty in standard light > security-empty-standard light 1`] = `"[38;2;0;87;217m[INFO][0m [1mSecurity audit[0m: No tool security decisions have been recorded for this session yet."`;

exports[`tool-activity > Setup needed > renders image generation in narrow width > setup-image-narrow width 1`] = `
"[38;2;255;167;38m[WARN][0m [1mSetup required[0m: image_generation needs one protected credential before I can continue.
[2m  Provider: fal[0m
[2m  Model: fal-ai/flux/dev[0m
[2m  Secret env: FAL_KEY[0m
[2m  The key is captured by the CLI and is not sent to the model or written to the transcript.[0m"
`;

exports[`tool-activity > Setup needed > renders image generation in no Unicode > setup-image-no Unicode 1`] = `
"[38;2;255;167;38m[WARN][0m [1mSetup required[0m: image_generation needs one protected credential before I can continue.
[2m  Provider: fal[0m
[2m  Model: fal-ai/flux/dev[0m
[2m  Secret env: FAL_KEY[0m
[2m  The key is captured by the CLI and is not sent to the model or written to the transcript.[0m"
`;

exports[`tool-activity > Setup needed > renders image generation in no color > setup-image-no color 1`] = `
"[WARN] Setup required: image_generation needs one protected credential before I can continue.
  Provider: fal
  Model: fal-ai/flux/dev
  Secret env: FAL_KEY
  The key is captured by the CLI and is not sent to the model or written to the transcript."
`;

exports[`tool-activity > Setup needed > renders image generation in plain > setup-image-plain 1`] = `
"[WARN] Setup required: image_generation needs one protected credential before I can continue.
  Provider: fal
  Model: fal-ai/flux/dev
  Secret env: FAL_KEY
  The key is captured by the CLI and is not sent to the model or written to the transcript."
`;

exports[`tool-activity > Setup needed > renders image generation in standard dark > setup-image-standard dark 1`] = `
"[38;2;255;167;38m[WARN][0m [1mSetup required[0m: image_generation needs one protected credential before I can continue.
[2m  Provider: fal[0m
[2m  Model: fal-ai/flux/dev[0m
[2m  Secret env: FAL_KEY[0m
[2m  The key is captured by the CLI and is not sent to the model or written to the transcript.[0m"
`;

exports[`tool-activity > Setup needed > renders image generation in standard light > setup-image-standard light 1`] = `
"[38;2;239;108;0m[WARN][0m [1mSetup required[0m: image_generation needs one protected credential before I can continue.
[2m  Provider: fal[0m
[2m  Model: fal-ai/flux/dev[0m
[2m  Secret env: FAL_KEY[0m
[2m  The key is captured by the CLI and is not sent to the model or written to the transcript.[0m"
`;

exports[`tool-activity > Setup needed > renders other capability in narrow width > setup-other-narrow width 1`] = `
"[38;2;255;167;38m[WARN][0m [1mSetup required[0m: tts needs one protected credential before I can continue.
[2m  Provider: default[0m
[2m  Model: default[0m
[2m  Secret env: ELEVENLABS_API_KEY[0m
[2m  The key is captured by the CLI and is not sent to the model or written to the transcript.[0m"
`;

exports[`tool-activity > Setup needed > renders other capability in no Unicode > setup-other-no Unicode 1`] = `
"[38;2;255;167;38m[WARN][0m [1mSetup required[0m: tts needs one protected credential before I can continue.
[2m  Provider: default[0m
[2m  Model: default[0m
[2m  Secret env: ELEVENLABS_API_KEY[0m
[2m  The key is captured by the CLI and is not sent to the model or written to the transcript.[0m"
`;

exports[`tool-activity > Setup needed > renders other capability in no color > setup-other-no color 1`] = `
"[WARN] Setup required: tts needs one protected credential before I can continue.
  Provider: default
  Model: default
  Secret env: ELEVENLABS_API_KEY
  The key is captured by the CLI and is not sent to the model or written to the transcript."
`;

exports[`tool-activity > Setup needed > renders other capability in plain > setup-other-plain 1`] = `
"[WARN] Setup required: tts needs one protected credential before I can continue.
  Provider: default
  Model: default
  Secret env: ELEVENLABS_API_KEY
  The key is captured by the CLI and is not sent to the model or written to the transcript."
`;

exports[`tool-activity > Setup needed > renders other capability in standard dark > setup-other-standard dark 1`] = `
"[38;2;255;167;38m[WARN][0m [1mSetup required[0m: tts needs one protected credential before I can continue.
[2m  Provider: default[0m
[2m  Model: default[0m
[2m  Secret env: ELEVENLABS_API_KEY[0m
[2m  The key is captured by the CLI and is not sent to the model or written to the transcript.[0m"
`;

exports[`tool-activity > Setup needed > renders other capability in standard light > setup-other-standard light 1`] = `
"[38;2;239;108;0m[WARN][0m [1mSetup required[0m: tts needs one protected credential before I can continue.
[2m  Provider: default[0m
[2m  Model: default[0m
[2m  Secret env: ELEVENLABS_API_KEY[0m
[2m  The key is captured by the CLI and is not sent to the model or written to the transcript.[0m"
`;

exports[`tool-activity > Tool activity timeline > renders empty in narrow width > timeline-empty-narrow width 1`] = `"[2mNo activity.[0m"`;

exports[`tool-activity > Tool activity timeline > renders empty in no Unicode > timeline-empty-no Unicode 1`] = `"[2mNo activity.[0m"`;

exports[`tool-activity > Tool activity timeline > renders empty in no color > timeline-empty-no color 1`] = `"No activity."`;

exports[`tool-activity > Tool activity timeline > renders empty in plain > timeline-empty-plain 1`] = `"No activity."`;

exports[`tool-activity > Tool activity timeline > renders empty in standard dark > timeline-empty-standard dark 1`] = `"[2mNo activity.[0m"`;

exports[`tool-activity > Tool activity timeline > renders empty in standard light > timeline-empty-standard light 1`] = `"[2mNo activity.[0m"`;

exports[`tool-activity > Tool activity timeline > renders multiple mixed in narrow width > timeline-mixed-narrow width 1`] = `
"[38;2;76;175;80m✓[0m [1mweb.extract[0m [2m| 800ms[0m
[38;2;64;224;208m(⌦)[0m [1mmemory.write[0m
[38;2;239;83;80m✗[0m [1mterminal.exec[0m [2m| 300ms[0m"
`;

exports[`tool-activity > Tool activity timeline > renders multiple mixed in no Unicode > timeline-mixed-no Unicode 1`] = `
"[x] [1mweb.extract[0m [2m| 800ms[0m
[>] [1mmemory.write[0m
[-] [1mterminal.exec[0m [2m| 300ms[0m"
`;

exports[`tool-activity > Tool activity timeline > renders multiple mixed in no color > timeline-mixed-no color 1`] = `
"✓ web.extract | 800ms
(⌦) memory.write
✗ terminal.exec | 300ms"
`;

exports[`tool-activity > Tool activity timeline > renders multiple mixed in plain > timeline-mixed-plain 1`] = `
"[x] web.extract | 800ms
[>] memory.write
[-] terminal.exec | 300ms"
`;

exports[`tool-activity > Tool activity timeline > renders multiple mixed in standard dark > timeline-mixed-standard dark 1`] = `
"[38;2;76;175;80m✓[0m [1mweb.extract[0m [2m| 800ms[0m
[38;2;64;224;208m(⌦)[0m [1mmemory.write[0m
[38;2;239;83;80m✗[0m [1mterminal.exec[0m [2m| 300ms[0m"
`;

exports[`tool-activity > Tool activity timeline > renders multiple mixed in standard light > timeline-mixed-standard light 1`] = `
"[38;2;46;125;50m✓[0m [1mweb.extract[0m [2m| 800ms[0m
[38;2;0;140;149m(⌦)[0m [1mmemory.write[0m
[38;2;198;40;40m✗[0m [1mterminal.exec[0m [2m| 300ms[0m"
`;

exports[`tool-activity > Tool activity timeline > renders single done in narrow width > timeline-done-narrow width 1`] = `"[38;2;76;175;80m✓[0m [1martifact.store[0m [2m| 120ms[0m [2m| 1.2k captured / 1.0k sent[0m"`;

exports[`tool-activity > Tool activity timeline > renders single done in no Unicode > timeline-done-no Unicode 1`] = `"[x] [1martifact.store[0m [2m| 120ms[0m [2m| 1.2k captured / 1.0k sent[0m"`;

exports[`tool-activity > Tool activity timeline > renders single done in no color > timeline-done-no color 1`] = `"✓ artifact.store | 120ms | 1.2k captured / 1.0k sent"`;

exports[`tool-activity > Tool activity timeline > renders single done in plain > timeline-done-plain 1`] = `"[x] artifact.store | 120ms | 1.2k captured / 1.0k sent"`;

exports[`tool-activity > Tool activity timeline > renders single done in standard dark > timeline-done-standard dark 1`] = `"[38;2;76;175;80m✓[0m [1martifact.store[0m [2m| 120ms[0m [2m| 1.2k captured / 1.0k sent[0m"`;

exports[`tool-activity > Tool activity timeline > renders single done in standard light > timeline-done-standard light 1`] = `"[38;2;46;125;50m✓[0m [1martifact.store[0m [2m| 120ms[0m [2m| 1.2k captured / 1.0k sent[0m"`;

exports[`tool-activity > Tool activity timeline > renders single failed in narrow width > timeline-failed-narrow width 1`] = `"[38;2;239;83;80m✗[0m [1mterminal.exec[0m [2m| 500ms[0m"`;

exports[`tool-activity > Tool activity timeline > renders single failed in no Unicode > timeline-failed-no Unicode 1`] = `"[-] [1mterminal.exec[0m [2m| 500ms[0m"`;

exports[`tool-activity > Tool activity timeline > renders single failed in no color > timeline-failed-no color 1`] = `"✗ terminal.exec | 500ms"`;

exports[`tool-activity > Tool activity timeline > renders single failed in plain > timeline-failed-plain 1`] = `"[-] terminal.exec | 500ms"`;

exports[`tool-activity > Tool activity timeline > renders single failed in standard dark > timeline-failed-standard dark 1`] = `"[38;2;239;83;80m✗[0m [1mterminal.exec[0m [2m| 500ms[0m"`;

exports[`tool-activity > Tool activity timeline > renders single failed in standard light > timeline-failed-standard light 1`] = `"[38;2;198;40;40m✗[0m [1mterminal.exec[0m [2m| 500ms[0m"`;

exports[`tool-activity > Tool activity timeline > renders single gated in narrow width > timeline-gated-narrow width 1`] = `"[38;2;255;180;84m⚠[0m [1mworkspace.write[0m [2m| 50ms[0m [38;2;255;180;84m| decision: ask[0m [38;2;255;180;84m| risk: destructive-local[0m"`;

exports[`tool-activity > Tool activity timeline > renders single gated in no Unicode > timeline-gated-no Unicode 1`] = `"[?] [1mworkspace.write[0m [2m| 50ms[0m [38;2;255;180;84m| decision: ask[0m [38;2;255;180;84m| risk: destructive-local[0m"`;

exports[`tool-activity > Tool activity timeline > renders single gated in no color > timeline-gated-no color 1`] = `"⚠ workspace.write | 50ms | decision: ask | risk: destructive-local"`;

exports[`tool-activity > Tool activity timeline > renders single gated in plain > timeline-gated-plain 1`] = `"[?] workspace.write | 50ms | decision: ask | risk: destructive-local"`;

exports[`tool-activity > Tool activity timeline > renders single gated in standard dark > timeline-gated-standard dark 1`] = `"[38;2;255;180;84m⚠[0m [1mworkspace.write[0m [2m| 50ms[0m [38;2;255;180;84m| decision: ask[0m [38;2;255;180;84m| risk: destructive-local[0m"`;

exports[`tool-activity > Tool activity timeline > renders single gated in standard light > timeline-gated-standard light 1`] = `"[38;2;180;83;9m⚠[0m [1mworkspace.write[0m [2m| 50ms[0m [38;2;180;83;9m| decision: ask[0m [38;2;180;83;9m| risk: destructive-local[0m"`;

exports[`tool-activity > Tool activity timeline > renders single running in narrow width > timeline-running-narrow width 1`] = `"[38;2;64;224;208m(⌦)[0m [1martifact.store[0m"`;

exports[`tool-activity > Tool activity timeline > renders single running in no Unicode > timeline-running-no Unicode 1`] = `"[>] [1martifact.store[0m"`;

exports[`tool-activity > Tool activity timeline > renders single running in no color > timeline-running-no color 1`] = `"(⌦) artifact.store"`;

exports[`tool-activity > Tool activity timeline > renders single running in plain > timeline-running-plain 1`] = `"[>] artifact.store"`;

exports[`tool-activity > Tool activity timeline > renders single running in standard dark > timeline-running-standard dark 1`] = `"[38;2;64;224;208m(⌦)[0m [1martifact.store[0m"`;

exports[`tool-activity > Tool activity timeline > renders single running in standard light > timeline-running-standard light 1`] = `"[38;2;0;140;149m(⌦)[0m [1martifact.store[0m"`;
